--- a/titanic/titanic.html
+++ b/titanic/titanic.html
@@ -78,7 +78,7 @@
 <button style="text-align: center; background-color: Transparent; background: url(redbutt.png);" type = "button"
         onclick = "myFunction()" id = 1>
 
-    <script src="https://cdnjs.buttflare.com/ajax/libs/synaptic/1.1.4/synaptic.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/synaptic/1.1.4/synaptic.js"></script>
 
     <script>
         var Layer = synaptic.Layer,
